# omr-img2midi

./: .gitignore  AE2E.ipynb  README.md  Staff_Removal.ipynb  omr.ipynb  pyproject.toml
data/: semantic.g4
src/: main.py
src/core/: __init__.py  bounding_box.py  utils.py
src/core/doc2segments/: __init__.py  bounding_box.py  clustering.py  segmentation.py
src/core/img2doc/: README.md  __init__.py  contours.py  corner_utils.py  imgutils.py  imutils.py  quadrilaterals.py  scanner.py  transform.py
src/semantic/: __init__.py  ctc_predict.py  parser.py  sheet.py
src/semantic/compiler/: README.md  semantic.interp  semanticLexer.interp  semanticLexer.py  semanticLexer.tokens  semanticListener.py  semanticParser.py  semanticVisitor.py
src/semantic/end2end/: ctc_predict.py  ctc_utils.py
src/semantic/pipeline/: feature_matching.py  object_detection.py  pattern_matching.py  staff_removal.py  utils.py
src/util/: __init__.py  imgutils.py  metrics.py  one_pass.py
