[build-system]

requires = ["setuptools"]

build-backend = "setuptools.build_meta"


[project]

name = "simple-omr"

version = "1.0.0"

description = "About Optical Music Recognition project to perform translations from music sheets images to music encoding formats (MIDI, MEI ecc.)"

readme = "README.md"

requires-python = ">=3.8"

license = {file = "LICENSE.txt"}

keywords = ["omr", "music", "recognition", "ia", "computer vision"]

authors = [
  {name = "FreshMag", email = "pescomagnani@gmail.com" }
]

classifiers = [

  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "tabulate~=0.9.0",
  "scikit-learn~=1.4.1.post1",
  "opencv-python~=4.9.0.80",
  "tensorflow~=2.15.0",
  "numpy~=1.26.4",
  "pylsd-nova~=1.2.1",
  "matplotlib>=3.7.1",
  "tqdm"
]

[project.urls]
"Source" = "https://github.com/FreshMag/omr-img2midi"
"Forked from" = "https://github.com/OMR-Research/tf-end-to-end"
